--- a/css/style.css
+++ b/css/style.css
@@ -259,8 +259,8 @@ body {
 #section-parallax {
     text-align: center;
     background: url(../img/trees.jpg) center repeat fixed;
-    padding: 140px 0;
     background-size: cover;
+    padding: 140px 0;
     color: white;
 }
 
@@ -277,6 +277,18 @@ body {
 
 .card {
     margin-top: 3rem;
+    padding: 15px 0;
+}
+
+.card-title,
+.card-subtitle,
+.card-text {
+    padding-left: 15px;
+    padding-bottom: 5px;
+}
+
+.card-link {
+    padding-left: 20px;
 }
 
 .card img {
@@ -297,4 +309,217 @@ body {
 
 .card a:hover {
     color: rgb(19, 128, 36);
+}
+
+/* Section numbers */
+
+.section-numbers {
+    background-color: white;
+    padding-top: 5rem;
+}
+
+h2 {
+    text-align: center;
+}
+
+.num-content {
+    display: table;
+    font-size: 20px;
+    line-height: 20px;
+    height: 140px;
+    width: 140px;
+    background: rgba(19, 128, 36, 0.91);
+    border-radius: 100px;
+    color: white;
+    transition: 0.3s;
+
+}
+
+.num .num-content {
+    display: table-cell;
+    vertical-align: middle;
+
+}
+
+
+.num {
+    text-align: center;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    margin-left: 5rem;
+}
+
+
+.num-content p {
+    padding-top: 15px;
+}
+
+.num-content:hover {
+    color: #222;
+    transition: 0.3s;
+}
+
+/* Testimonials section */
+
+.section-testimonials {
+    padding-top: 5rem;
+
+}
+
+.testimonial {
+    margin-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.monka-img,
+.mario-img,
+.monice-img {
+    width: 135px;
+    height: auto;
+    border-radius: 50%;
+    transition: 0.5s;
+
+}
+
+.monka-img:hover,
+.mario-img:hover,
+.monice-img:hover {
+    transition: 0.5s;
+    transform: scale(0.95);
+
+}
+
+blockquote {
+    font-family: 'Nunito-Regular';
+    padding-left: 24px;
+}
+
+.fa.fa-quote-right {
+    margin-right: 10px;
+    float: left;
+}
+
+.testimonials-hr {
+    border-top: 2px solid rgba(19, 128, 36, 1);
+    width: 260px;
+}
+
+/* Contact section */
+
+.section-contact {
+    background-color: white;
+    padding: 10rem 0;
+}
+
+#contact .control-label {
+    font-size: 20px;
+    line-height: 80%;
+    margin-top: 10px;
+    float: left;
+}
+
+.form-control {
+    font-size: 18px;
+    float: right;
+}
+
+.form-horizontal {
+    padding-top: 5rem;
+}
+
+textarea:focus,
+input:focus {
+    border-color: rgba(19, 128, 36, 0.53) !important;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 1px rgba(231, 76, 60, 0.05) !important;
+}
+
+#contact .btn.btn-success {
+    background-color: rgba(19, 128, 36, 1);
+    border: 1px solid rgba(19, 128, 36, 1);
+    border-radius: 5px;
+    font-size: 20px;
+    margin-top: 50px;
+    margin-bottom: 5rem;
+    transition: 0.5s;
+}
+
+#contact .btn.btn-success:hover {
+    background-color: rgba(19, 128, 36, 0.9);
+    border: 1px solid rgba(19, 128, 36, 1);
+    transition: 0.5s;
+
+}
+
+/* Footer */
+
+footer {
+    background-color: #222;
+    padding-bottom: 10px;
+    position: relative;
+    text-align: center;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+    margin-top: 20px;
+}
+
+.social-links li {
+    display: inline-block;
+    margin-right: 20px;
+    margin-top: 30px;
+    padding-right: 25px;
+}
+
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+
+.social-links li a:link,
+.social-links li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    font-size: 160%;
+    transition: 0.2s;
+}
+
+
+.fa-facebook-square:hover {
+    color: #3b5998;
+}
+
+.fa-twitter-square:hover {
+    color: #00aced;
+}
+
+.fa-instagram:hover {
+    color: #517fa4;
+}
+
+.fa-facebook-square,
+.fa-twitter-square,
+.fa-instagram {
+    transition: 0.2s;
+}
+
+
+footer p {
+    color: #888;
+    text-align: center;
+    margin-top: 45px;
+    font-size: 18px;
+}
+
+.fa-chevron-circle-up {
+    margin-top: 35px;
+    color: rgb(14, 96, 27);
+    transition: 0.2s;
+}
+
+.fa-chevron-circle-up:hover {
+    color: rgba(14, 96, 27, 0.92);
+    transition: 0.2s;
 }
