--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,3 @@
-/* Colors
-
-rgba(19, 128, 36, 0.54);
-
-*/
-
-html,
-body {
-    height: 100%;
-    font-size: 16px;
-    font-family: 'Cubano-Regular';
-    background: url('../img/pattern.jpg') center center;
-}
-
-
 /* FONT FACES */
 @font-face {
     font-family: 'Cubano-Regular';
@@ -24,8 +9,17 @@ body {
     src: local('Nunito-Regular.ttf'), url('Nunito-Regular.ttf') format('truetype');
 }
 
+html,
+body {
+    height: 100%;
+    font-size: 16px;
+    font-family: 'Cubano-Regular';
+    background: url('../img/pattern.jpg') center center;
+}
+
 
 /* SECTION COVER */
+
 #cover {
     height: 100%;
     background: url(../img/trees.jpg) center;
@@ -50,6 +44,7 @@ body {
 }
 
 /* BUTTONS */
+
 .btn-lg,
 .btn-success-outline {
     background-color: transparent;
@@ -78,8 +73,11 @@ body {
 }
 
 .fa-arrow-down {
-    margin-left: 35rem;
-    margin-top: 50px;
+    position: absolute;
+    top: 80%;
+    right: 0;
+    left: 95%;
+    bottom: 5%;
     font-size: 2.5rem;
     color: white;
     transition: 0.3s;
@@ -96,6 +94,7 @@ body {
 }
 
 /* SPANS */
+
 .bold-green {
     color: rgba(19, 128, 36, 0.9);
 }
@@ -338,15 +337,13 @@ h2 {
 .num .num-content {
     display: table-cell;
     vertical-align: middle;
-
 }
-
 
 .num {
     text-align: center;
     padding-top: 5rem;
     padding-bottom: 5rem;
-    margin-left: 5rem;
+    padding-left: 1.6rem;
 }
 
 
@@ -461,15 +458,14 @@ footer {
 
 .social-links {
     list-style: none;
-    float: right;
     margin-top: 20px;
 }
 
 .social-links li {
     display: inline-block;
-    margin-right: 20px;
-    margin-top: 30px;
-    padding-right: 25px;
+    margin-right: 15px;
+    margin-top: 25px;
+    padding-right: 20px;
 }
 
 .social-links li:last-child {
@@ -522,4 +518,154 @@ footer p {
 .fa-chevron-circle-up:hover {
     color: rgba(14, 96, 27, 0.92);
     transition: 0.2s;
+}
+
+/* ********   RESPONSIVENESS  ******** */
+
+/* Full HD Resolution */
+@media only screen and (max-width: 1920px) {
+
+    .wall-sticker {
+        font-size: 4rem;
+        padding: 16rem 20rem 10rem 3rem;
+    }
+
+}
+
+/* Laptops */
+@media only screen and (max-width: 1440px) {
+    .wall-sticker {
+        font-size: 3rem;
+        padding: 10rem 16rem 9.5rem 2rem;
+    }
+
+    .moto {
+        font-size: 2rem;
+        margin-top: 12rem;
+        margin-left: 12rem;
+    }
+
+    .fa-facebook-square,
+    .fa-twitter-square,
+    .fa-instagram {
+        font-size: 36px;
+    }
+
+}
+
+/* Tablets */
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+    .navbar {
+        font-size: 15px;
+    }
+
+    .moto {
+        font-size: 2.5rem;
+        margin-left: 8rem;
+    }
+
+    .monka-img,
+    .mario-img,
+    .monice-img {
+        width: 85px;
+        height: 85px;
+    }
+
+    .testimonials-hr {
+        width: 175px;
+    }
+
+    blockquote {
+        padding-left: 0;
+    }
+
+    .fa-facebook-square,
+    .fa-twitter-square,
+    .fa-instagram {
+        font-size: 30px;
+    }
+
+    .num {
+        padding-left: 1.2rem;
+    }
+
+}
+
+/* Small Screens */
+@media only screen and (min-width: 576px) and (max-width: 991px) {
+    .fa-arrow-down {
+        position: relative;
+    }
+
+    .num-content {
+        height: 130px;
+        width: 130px;
+    }
+
+    .fa-facebook-square,
+    .fa-twitter-square,
+    .fa-instagram {
+        font-size: 24px;
+    }
+
+    .num {
+        padding-left: 2.2rem;
+        margin-left: 0;
+    }
+}
+
+/* Very Small Screens */
+@media only screen and (max-width: 575px) {
+    .moto {
+        display: none;
+    }
+
+    .fa-arrow-down {
+        position: relative;
+    }
+
+    .fa-facebook-square,
+    .fa-twitter-square,
+    .fa-instagram {
+        font-size: 20px;
+    }
+
+    .social-links {
+        margin: 0 auto;
+        padding: 0;
+    }
+
+    .social-links li {
+        padding-left: 15px;
+    }
+
+    .num {
+        width: 100%;
+        padding: 1.2rem 0 1.2rem 8rem;
+    }
+
+    .testimonial {
+        margin-top: 2.5rem;
+        padding-bottom: 2.5rem;
+    }
+
+    .timeline>li>.timeline-panel {
+        width: 100%;
+    }
+
+    .timeline>li>.timeline-badge {
+        position: absolute;
+        left: 90%;
+    }
+
+    .timeline>.timeline-inverted>.timeline-badge {
+        position: absolute;
+        left: 10%;
+    }
+
+    .timeline:before {
+        /* GREY LINE */
+        display: none;
+    }
+
 }
